--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@drpiou/async-storage": "^0.0.2",
-    "@drpiou/axios": "^0.0.3",
-    "@drpiou/expo-secure-storage": "^0.0.2",
-    "@drpiou/react-axios": "^0.0.3",
-    "@drpiou/react-stack": "^0.0.2",
-    "@drpiou/react-state": "^0.0.3",
-    "@drpiou/react-theme": "^0.0.3",
-    "@drpiou/react-utils": "^0.0.2",
-    "@drpiou/ts-utils": "^0.0.3",
+    "@drpiou/axios": "0.0.3",
+    "@drpiou/react-axios": "0.0.3",
+    "@drpiou/react-stack": "0.0.3",
+    "@drpiou/react-state": "0.0.4",
+    "@drpiou/react-theme": "0.0.3",
+    "@drpiou/react-utils": "0.0.3",
+    "@drpiou/ts-utils": "0.0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
