--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@drpiou/react-stack": "0.0.3",
     "@drpiou/react-state": "0.0.4",
     "@drpiou/react-theme": "0.0.3",
-    "@drpiou/react-utils": "0.0.3",
+    "@drpiou/react-utils": "https://github.com/drpiou/react-utils#develop",
     "@drpiou/ts-utils": "0.0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
